Fixed aplication signing pad and added an animatioin on the grant examples on small screens

--- a/css/application.css
+++ b/css/application.css
@@ -2,8 +2,7 @@
 
 /* General Styles */
 body {
-    margin: 0;
-    padding: var(--spacing4);
+    padding: var(--spacing4) 0;
     color: var(--color-black);
 }
 
